// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add a watch setting to true 1`] = `
Object {
  "module": Object {
    "rules": Array [],
  },
  "plugins": Array [],
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".json",
    ],
  },
  "stats": Object {
    "children": false,
    "chunks": false,
    "modules": false,
    "reasons": false,
  },
  "watch": true,
  "watchOptions": undefined,
}
`;

exports[`should take watchOptions 1`] = `
Object {
  "module": Object {
    "rules": Array [],
  },
  "plugins": Array [],
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".json",
    ],
  },
  "stats": Object {
    "children": false,
    "chunks": false,
    "modules": false,
    "reasons": false,
  },
  "watch": true,
  "watchOptions": Object {
    "aggregateTimeout": 300,
  },
}
`;
